# vulkan-app

./: .gitignore  Cargo.toml  README.md
shaders/: imgui.frag  imgui.vert  sdf.frag  sdf.vert
src/: camera.rs  config.rs  debug.rs  error.rs  main.rs
src/ecs/: components.rs  mod.rs  systems.rs  world.rs
src/hud/: imgui_integration.rs  imgui_vulkan_backend.rs  mod.rs  overlay_renderer.rs  toolbar.rs
src/vulkan/: device.rs  instance.rs  mod.rs  pipeline.rs  renderer.rs  shader_compiler.rs  shader_watcher.rs  swapchain.rs
